--- a/Aayojakah/Views/Customer/Dashboard.cshtml
+++ b/Aayojakah/Views/Customer/Dashboard.cshtml
@@ -14,7 +14,7 @@
                     <div class="card-body">
                         <h4 class="card-title mb-5">Booking Path</h4>
 
-                        <div class="hori-timeline" dir="ltr">
+                        <div class="hori-timeline" dir="ltr" style="margin-top:15px;">
                             <ul class="list-inline events">
                                 <li class="list-inline-item event-list">
                                     <div class="px-4">
