--- a/Aayojakah/Views/Shared/_AdminLayout.cshtml
+++ b/Aayojakah/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,7 @@
 <html>
 <head>
 
-
+    <style>
         #developer {
             color: antiquewhite;
             text-align: left;
@@ -127,7 +127,7 @@
     <div style="margin-top:40px";>
 
     </div>
-    "
+    
 
     @Html.Raw(JavaScriptSnippet.FullScript)
     
@@ -144,8 +144,8 @@
                 <div class="container">
                     <div class="row gy-4">
                         <div class="col-lg-5 col-md-12 footer-info">
-                            <a href="index.html" class="logo d-flex align-items-center">
-                                <span>Aayojaka: ~ The Organizers</span>
+                            <a href="#" class="logo d-flex align-items-center">
+                                <span>Aayojakah</span>
                             </a>
                             <p>
                                 <br />
@@ -161,7 +161,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-2 col-6 footer-links">
+                        @*<div class="col-lg-2 col-6 footer-links">
                             <h4>Useful Links</h4>
                             <ul>
                                 <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
@@ -173,9 +173,9 @@
 
 
                             </ul>
-                        </div>
+                        </div>*@
 
-                        <div class="col-lg-2 col-6 footer-links">
+                        @*<div class="col-lg-2 col-6 footer-links">
                             <h4>Our Services</h4>
                             <ul>
                                 <li><i class="bi bi-dash"></i> <a href="#">Wedding Ceremony </a></li>
@@ -185,9 +185,9 @@
                                 <li><i class="bi bi-dash"></i> <a href="#">College Fest</a></li>
                                 <li><i class="bi bi-dash"></i> <a href="#">Corporate Events</a></li>
                             </ul>
-                        </div>
+                        </div>*@
 
-                        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+                        <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start" style="margin-left:20%;">
                             <h4>Contact Us</h4>
                             <p>
                                 Plot No 26, Rajiv Gandhi Infotech Park, <br>
