--- a/Aayojakah/Views/Shared/_LayoutCustomer.cshtml
+++ b/Aayojakah/Views/Shared/_LayoutCustomer.cshtml
@@ -156,8 +156,8 @@
         <div class="container">
             <div class="row gy-4">
                 <div class="col-lg-5 col-md-12 footer-info">
-                    <a href="index.html" class="logo d-flex align-items-center">
-                        <span>Aayojaka: ~ The Organizers</span>
+                    <a href="#" class="logo d-flex align-items-center">
+                        <span>Aayojakah</span>
                     </a>
                     <p>
                         <br />
@@ -173,7 +173,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-2 col-6 footer-links">
+                @*<div class="col-lg-2 col-6 footer-links">
                     <h4>Useful Links</h4>
                     <ul>
                         <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
@@ -197,9 +197,9 @@
                         <li><i class="bi bi-dash"></i> <a href="#">College Fest</a></li>
                         <li><i class="bi bi-dash"></i> <a href="#">Corporate Events</a></li>
                     </ul>
-                </div>
+                </div>*@
 
-                <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+                <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start" style="margin-left:20%;">
                     <h4>Contact Us</h4>
                     <p>
                         Plot No 26, Rajiv Gandhi Infotech Park, <br>
